# BasicUtility

./: README.md  ReadInput.py  pyproject.toml
basicutility/: ReadInput.py  __init__.py  slicetools.py
